Allow customizing volumes and memory