@@ -6,15 +6,14 @@ def call(Map parameters = [:], body) {
   def defaultLabel = 'docker-' + currentBuild.projectName + "-" + currentBuild.id
   def label = parameters.get('label', defaultLabel)
   def image = parameters.get('image', 'docker:latest')
+  def volumes = parameters.get('volumes', [])
+  def memory = parameters.get('memory', '1024Mi')
 
   podTemplate(cloud: cloud, label: label,
     containers: [
       containerTemplate([name: 'docker', image: "${image}", command: 'cat', ttyEnabled: true,
-        envVars: [
-          envVar(key: '_JAVA_OPTIONS', value:'-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1')
-        ],
-        resourceLimitMemory: '1024Mi'])],
-    volumes: [hostPathVolume(hostPath: '/var/run/docker.sock', mountPath: '/var/run/docker.sock')]) {
+        resourceLimitMemory: memory])],
+    volumes: [hostPathVolume(hostPath: '/var/run/docker.sock', mountPath: '/var/run/docker.sock')]+volumes) {
 
       body()
   }
